// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-36 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-18 font-size-14 v-padding-8"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="test"
  />
</div>
`;

exports[`TextInput should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-60 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-30 font-size-24 v-padding-14"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="test"
  />
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-accept"
    onClick={[MockFunction]}
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled -clickable"
    style={Object {}}
  >
    <SvgrURL
      className="flipY"
    />
  </div>
</div>
`;
